fix:fix elements spacing

--- a/practice-two/src/styles/pages/integrations.css
+++ b/practice-two/src/styles/pages/integrations.css
@@ -52,12 +52,12 @@
   }
 
   .integrations-title {
-    padding-top: 132px;
+    padding-top: 120px;
     line-height: 68px;
   }
 
   .integrations-desc {
-    margin-top: 25px;
+    margin-top: 11px;
   }
 
   .integrations-img {
